added JobConfigCreator / adjusted .travis.yml

--- a/server/app/views/adapters/index.scala.html
+++ b/server/app/views/adapters/index.scala.html
@@ -3,16 +3,16 @@
 
 @views.html.adapters.mainCommon(assets = assets
     , webJarsUtil = webJarsUtil
-)(title = "Common Test Adapter"
-    , icon = assets.withUrlPrefix("../../../../../../target/scala-2.12/routes/main/common").path("assets/images/favicon.png")
-    , styles = Html("<link rel=\"stylesheet\" type=\"text/css\" href=\"" +assets.withUrlPrefix("../../../../../../target/scala-2.12/routes/main/common").path("assets/stylesheets/main.css") + "\">")
-    , clientScripts = Html("<script src=\"" +assets.withUrlPrefix("../../../../../../target/scala-2.12/routes/main/common").path("assets/javascripts/versioned.js")+ "\" ></script>")
+)(title = "Test Adapter"
+    , icon = assets.withUrlPrefix("/adapters").path("assets/images/favicon.png")
+    , styles = Html("<link rel=\"stylesheet\" type=\"text/css\" href=\"" +assets.withUrlPrefix("/adapters").path("assets/stylesheets/main.css") + "\">")
+    , clientScripts = Html("<script src=\"" +assets.withUrlPrefix("/adapters").path("assets/javascripts/versioned.js")+ "\" ></script>")
 ) {
 
-    @scalajs.html.scripts("cms-adapters-common-client",
+    @scalajs.html.scripts("pme123-adapters-client",
         routes.Assets.at(_).toString,
         name => getClass.getResource(s"/public/$name") != null)
 
-    <script>client.TestProjectClient.main("Common Test Adapter");</script>
+    <script>client.TestProjectClient.main("Test Adapter");</script>
 
 }
