--- a/server/app/views/adapters/main.scala.html
+++ b/server/app/views/adapters/main.scala.html
@@ -14,12 +14,12 @@
         <title>@title</title>
         <link rel="shortcut icon" type="image/png" href="@icon">
         @Html(webJarsUtil.css("semantic.min.css"))
-        @Html(webJarsUtil.css("../../../../../../public/stylesheets/main.css"))
+        @Html(webJarsUtil.css("stylesheets/main.css"))
         @styles
             <!-- for scalajs routing -->
         @helper.javascriptRouter("jsRoutes")(routes.javascript.Assets.versioned)
 
-        @Html(webJarsUtil.script("../../../../../../public/javascripts/versioned.js"))
+        @Html(webJarsUtil.script("javascripts/versioned.js"))
 
         <script type="text/javascript">
                 (function () {
