--- a/server/app/views/adapters/demo.scala.html
+++ b/server/app/views/adapters/demo.scala.html
@@ -1,7 +1,7 @@
 @this(webJarsUtil: org.webjars.play.WebJarsUtil)
 @(context: String, assets: AssetsFinder)(implicit r: Request[_], rh: RequestHeader)
 
-@views.html.adapters.mainCommon(assets = assets
+@views.html.adapters.mainDemo(assets = assets
     , webJarsUtil = webJarsUtil
 )(title = "Demo Adapter"
     , icon = assets.withUrlPrefix(context).path("assets/images/favicon.png")
