added Demo with custom UI

--- a/server/app/views/adapters/demo.scala.html
+++ b/server/app/views/adapters/demo.scala.html
@@ -20,7 +20,7 @@
     @if(clientType == JOB_CLIENT) {
         <script>client.JobCockpitClient.main("@context");</script>
     } else {
-        <script>client.GenericResultClient.main("@context");</script>
+        <script>client.DemoResultClient.main("@context");</script>
     }
 
 }
