fixed scroll issue

--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -1,6 +1,6 @@
 #log-panel {
-    padding-top: 7em;
-    max-height:calc(100vh - 4em);
+    margin-top: 6em;
+    max-height:calc(100vh - 8em);
     overflow: auto;
 }
 
