cleanup after ugrade of images example

--- a/server/app/views/adapters/demo.scala.html
+++ b/server/app/views/adapters/demo.scala.html
@@ -1,4 +1,4 @@
-@import pme123.adapters.server.boundary.{ClientType, JOB_CLIENT}
+@import pme123.adapters.server.entity.{ClientType, JOB_CLIENT}
 
 @this(webJarsUtil: org.webjars.play.WebJarsUtil)
 @(context: String
