--- a/server/app/views/adapters/demo.scala.html
+++ b/server/app/views/adapters/demo.scala.html
@@ -3,6 +3,7 @@
 @this(webJarsUtil: org.webjars.play.WebJarsUtil)
 @(context: String
         , clientType: ClientType
+        , websocketPath: String
         , assets: AssetsFinder)(implicit r: Request[_], rh: RequestHeader)
 
 @views.html.adapters.mainDemo(assets = assets
@@ -18,7 +19,7 @@
         name => getClass.getResource(s"/public/$name") != null)
 
     @if(clientType == JOB_CLIENT) {
-        <script>client.JobCockpitClient.main("@context");</script>
+        <script>client.JobCockpitClient.main("@context", "@websocketPath");</script>
     } else {
         <script>client.DemoResultClient.main("@context");</script>
     }
