switched to DemoClient - so ProjectClient can be used by the projects

--- a/server/app/views/adapters/index.scala.html
+++ b/server/app/views/adapters/index.scala.html
@@ -18,6 +18,6 @@
         routes.Assets.at(_).toString,
         name => getClass.getResource(s"/public/$name") != null)
 
-    <script>client.ProjectClient.main("@context", "@websocketPath", "@clientType");</script>
+    <script>client.DemoClient.main("@context", "@websocketPath", "@clientType");</script>
 
 }
