--- a/docs/_includes/head/custom.html
+++ b/docs/_includes/head/custom.html
@@ -1,2 +1,2 @@
 
-<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+<link rel="shortcut icon" type="image/png" href="{{ site.url }}{{site.baseurl}}/assets/images/favicon.png">
