--- a/server/app/views/adapters/index.scala.html
+++ b/server/app/views/adapters/index.scala.html
@@ -8,16 +8,21 @@
 <html>
     <head>
         <title>@projConfig.pageTitle</title>
+        <!-- favicon -->
         <link rel="shortcut icon" type="image/png" href="@assets.withUrlPrefix(projConfig.context).path("assets/images/favicon.png")">
+        <!-- IE with compatibility mode -->
         <meta http-equiv="x-ua-compatible" content="IE=edge">
+        <!-- Semantic-UI Styles-->
         @Html(webJarsUtil.css("semantic.min.css"))
+        <!-- scala-adapters Styles -->
         @if(projConfig.isDemo) {
             @Html("<link rel=\"stylesheet\" type=\"text/css\" href=\"" + assets.withUrlPrefix(projConfig.context).path("assets/stylesheets/main.css") + "\">")
         } else {
             @Html(webJarsUtil.css("stylesheets/main.css"))
         }
+        <!-- Projects Styles see ProjectConfig.styleName -->
         @Html(projConfig.styleName.map(style => "<link rel=\"stylesheet\" type=\"text/css\" href=\"" + assets.withUrlPrefix(projConfig.context).path(s"assets/stylesheets/$style.css") + "\">").getOrElse(""))
-            <!-- for scalajs routing -->
+        <!-- for scalajs routing -->
         @helper.javascriptRouter("jsRoutes")(routes.javascript.Assets.versioned)
 
         @if(projConfig.isDemo) {
@@ -25,7 +30,7 @@
         } else {
             @Html(webJarsUtil.script("javascripts/versioned.js"))
         }
-
+        <!-- additional javascript files -->
         <script type="text/javascript">
                 (function () {
                     var oldVersioned = jsRoutes.controllers.Assets.versioned;
@@ -34,15 +39,18 @@
                     };
                 })();
         </script>
-    </head>
-    <body>
+        <!-- END for scalajs routing -->
         @scalajs.html.scripts(s"${projConfig.projectName}-client",
             routes.Assets.at(_).toString,
             name => getClass.getResource(s"/public/$name") != null)
 
+            <!-- the Client code -->
         <script src=@(s"${projConfig.context}/assets/${projConfig.projectName}-client-jsdeps${if(projConfig.isDevMode) "" else ".min"}.js") ></script>
         <script src=@(s"${projConfig.context}/assets/${projConfig.projectName}-client-${if(projConfig.isDevMode) "fast" else ""}opt.js") ></script>
 
+    </head>
+    <body>
+        <!-- calls to the Client code-->
         <script>client.@(projConfig.clientName).main("@projConfig.context", "@projConfig.websocketPath", "@projConfig.clientType");</script>
 
     </body>
